# helpme

./: .env  Cargo.toml  README.md  docker-compose.yaml  useful_curl_request_to_test.md
http/: Cargo.toml
http/src/: helper.rs  lib.rs  request.rs
migrations/: 20221217142956_create_table_helper.down.sql  20221217142956_create_table_helper.up.sql  20221217143424_create_table_requester.down.sql  20221217143424_create_table_requester.up.sql  20221217143431_create_table_request.down.sql  20221217143431_create_table_request.up.sql  20221217151305_seed_data_for_table_requester_helper.down.sql  20221217151305_seed_data_for_table_requester_helper.up.sql  20221218082922_add_column_status_for_table_requests.down.sql  20221218082922_add_column_status_for_table_requests.up.sql  20221219151447_create_table_helper_requests.down.sql  20221219151447_create_table_helper_requests.up.sql
src/: main.rs
