[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["macros"] }
validator = { version = "0.16.0", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "uuid",
] }
anyhow = "1.0.58"
serde_with = { version = "2.0.0", features = ["time_0_3"] }
thiserror = "1.0.31"
serde = "1.0.140"
time = "0.3.11"
